--- a/lab-03/ui/ecc.ui
+++ b/lab-03/ui/ecc.ui
@@ -6,141 +6,117 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>707</width>
+    <height>527</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>651</width>
-      <height>51</height>
+      <x>240</x>
+      <y>30</y>
+      <width>241</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Ravie</family>
-      <pointsize>36</pointsize>
+      <pointsize>22</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
-     <string>CAESAR CIPHER</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>130</y>
-      <width>71</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Plaintext</string>
+     <string>ECC CIPHER</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>240</y>
+      <x>100</x>
+      <y>270</y>
       <width>71</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
     <property name="text">
-     <string>Key</string>
+     <string>Signature</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QPlainTextEdit" name="txt_sign">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>360</y>
-      <width>101</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Cipher Text</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="txt_plain">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>100</y>
-      <width>521</width>
+      <x>210</x>
+      <y>280</y>
+      <width>371</width>
       <height>111</height>
      </rect>
     </property>
    </widget>
-   <widget class="QTextEdit" name="txt_key">
+   <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>230</y>
-      <width>521</width>
-      <height>61</height>
+      <x>100</x>
+      <y>140</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QTextEdit" name="txt_cipher">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>330</y>
-      <width>521</width>
-      <height>161</height>
-     </rect>
+    <property name="text">
+     <string>information</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_encrypt">
+   <widget class="QPlainTextEdit" name="txt_info">
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>510</y>
+      <y>140</y>
+      <width>371</width>
+      <height>111</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_sign">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>420</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Encrypt</string>
+     <string>Sign</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_decrypt">
+   <widget class="QPushButton" name="btn_verify">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>420</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Verify</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_gen_keys">
     <property name="geometry">
      <rect>
       <x>550</x>
-      <y>510</y>
+      <y>50</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Decrypt</string>
+     <string>Generate Keys</string>
     </property>
    </widget>
   </widget>
@@ -149,7 +125,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>707</width>
      <height>26</height>
     </rect>
    </property>
